# fastapi-tortoise-integration

./: .dockerignore  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml  requirements.txt  run.sh
app/: main.py
app/api/v1/: endpoint.py
app/models/: fields.py  models.py
app/schemas/: schema.py
migrations/models/: 0_20240522171919_init.py
